# monasca-agent

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  agent.conf.example  agent.conf.template  agent.py  agent.yaml.template  bindep.txt  datadog.conf  datadog.conf.example  dependencies.txt  emitter.py  mkdocs.yml  monasca-agent_arch.graffle  requirements.txt  setup.cfg  setup.py  supervisord.dev.conf  test-requirements.txt  tox.ini
conf.d/: a10_system_check.yaml.example  activemq.yaml.example  activemq_58.yaml.example  apache.yaml.example  cacti.yaml.example  cadvisor_host.yaml.example  cassandra.yaml.example  ceph.yaml.example  check_mk_local.yaml.example  couch.yaml.example  couchbase.yaml.example  cpu.yaml  crash.yaml.example  directory.yaml.example  disk.yaml  docker.yaml.example  elastic.yaml.example  file_size.yaml.example  gearmand.yaml.example  gunicorn.yaml.example  haproxy.yaml.example  hdfs.yaml.example  host_alive.yaml.example  http_check.yaml.example  http_metrics.yaml.example  iis.yaml.example  influxdb.yaml.example  jenkins.yaml.example  jmx.yaml.example  json_plugin.yaml.example  kafka.yaml.example  kafka_consumer.yaml.example  kibana.yaml.example  kubernetes.yaml.example  kubernetes_api.yaml.example  kyototycoon.yaml.example  libvirt.yaml.example  lighttpd.yaml.example  load.yaml  lxc.yaml.example  (+35 more)
deb/: changelog  copyright
deb/control/: postinst  postrm  prerm
deb/init/: mon-agent.conf
debian/: changelog  control  install  mon-agent.init  package.upstart  postinst  postrm  preinst
debian/init/: mon-agent.conf
docker/: README.rst  build_image.sh
docker/collector/: Dockerfile  build_image.sh  health_check.py  kubernetes_get_host.py  start.sh
docker/forwarder/: Dockerfile  agent.yaml.j2  build_image.sh  health_check.py  start.sh
docker/statsd/: Dockerfile  README.rst  agent.yaml.j2  build_image.sh  health_check.py  start.sh
docs/: Agent.md  Customizations.md  Libvirt.md  MonascaMetrics.md  Ovs.md  Plugins.md  index.md
docs/DeveloperDocs/: agent_internals.md
etc/mon-agent/: supervisor.conf
jahmon/: agent.py  datadog.conf
jahmon/checks.d/: jahmon_http_check.py
jahmon/jahmon_lib/: jahmon_api_emitter.py  jahmonapi.py  keystone.py
jahmon/packaging/: Makefile
monagent/: agent.conf.example  agent.py  aggregator.py  collector.py  collector_daemon.py  config.py  datadog.conf  datadog.conf.example  dogstatsd.py  emitter.py  forwarder.py  httplibproxy.py  jmxfetch.py  migration.py  modules.py  transaction.py  util.py
monagent/api/: __init__.py  emitter.py  keystone.py  normalizer.py
monagent/checks/: __init__.py  agent_metrics.py  check_status.py  collector.py  datadog.py  ganglia.py  nagios.py  services_checks.py  utils.py
monagent/checks.d/: __init__.py  apache.py  cacti.py  couch.py  couchbase.py  directory.py  docker.py  elastic.py  gearmand.py  gunicorn.py  haproxy.py  hdfs.py  host_alive.py  http_check.py  iis.py  jahmon_http_check.py  jenkins.py  kafka_consumer.py  kyototycoon.py  lighttpd.py  mcache.py  mon_host_alive.py  mon_http_check.py  mon_nagios_wrapper.py  mongo.py  mysql.py  nagios_wrapper.py  network.py  nginx.py  postfix.py  postgres.py  process.py  rabbitmq.py  redisdb.py  riak.py  sqlserver.py  tcp_check.py  varnish.py  win32_event_log.py  wmi_check.py  (+1 more)
monagent/collector/: daemon.py  jmxfetch.py  modules.py
monagent/common/: aggregator.py  check_status.py  config.py  daemon.py  emitter.py  exceptions.py  keystone.py  metrics.py  util.py
monagent/conf.d/: http_check.yaml  jahmon_host_alive.yaml.example  jahmon_http_check.yaml.example  jahmon_nagios_wrapper.yaml.example
monagent/dogstream/: cassandra.py  supervisord_log.py
monagent/forwarder/: __init__.py  daemon.py  transaction.py
monagent/mon_lib/: mon_api.py  mon_api_emitter.py  mon_mapping.json  mon_normalizer.py  monapi.py
monagent/monapi/: keystone.py  mon_api_emitter.py  monapi.py
monagent/monstatsd/: __init__.py  daemon.py  dogstatsd.py  reporter.py  udp.py
monasca_agent/: version.py
monasca_setup/: README.md  agent_config.py  main.py  utils.py
monsetup/: README.md  __init__.py  agent_config.py  main.py
packaging/: Makefile  desc  mon-agent.init  monasca-agent.init  monasca-agent.init.template  monasca-agent.service.template  monasca-agent.target.template  monasca-collector.service.template  monasca-forwarder.service.template  monasca-statsd.service.template  supervisor.conf  supervisor.conf.template
playbooks/: docker-publish.yml
tests/: README.md  __init__.py  badconfig.conf  common.py  test-agent.yaml  test_agent_check.py  test_aggregator.py  test_autorestart.py  test_cacti.py  test_cassandra.py  test_cassandra_jmx.py  test_check_status.py  test_checks_k8s.py  test_checks_utils.py  test_common.py  test_config.py  test_couch.py  test_couchbase.py  test_crash.py  test_datadog.py  test_dogstatsd.py  test_elastic.py  test_gearman.py  test_haproxy.py  test_iis.py  test_java_jmx.py  test_keystone.py  test_laconic.py  test_mcache.py  test_metrics.py  test_modify_config.py  test_modules.py  test_mongo.py  test_monstatsd.py  test_mysql.py  test_postfix.py  test_process.py  test_redis.py  test_remove_config.py  test_service_plugin.py  (+14 more)
tests_to_fix/: badconfig.conf  common.py  target_module.py  test_cacti.py  test_cassandra_jmx.py  test_check_status.py  test_common.py  test_couch.py  test_couchbase.py  test_crash.py  test_elastic.py  test_gearman.py  test_haproxy.py  test_iis.py  test_java_jmx.py  test_laconic.py  test_mcache.py  test_modules.py  test_mongo.py  test_monstatsd.py  test_mysql.py  test_postfix.py  test_redis.py  test_solr.py  test_sqlserver.py  test_system.py  test_tail.py  test_tomcat.py  test_transaction.py  test_varnish.py  test_web.py  test_win32.py  test_win32_event_log.py  test_zookeeper.py
tools/: tox_install.sh
utilities/: plugin_test.sh
(+467 files in other folders)
