[metadata]
name=monasca-agent
maintainer=monasca
maintainer_email=monasca@lists.launchpad.net
description-file = README.md
home-page = https://github.com/openstack/monasca-agent
keywords=
    openstack
    monitoring
license=Apache-2
include_package_data=True
test_suite=nose.collector
classifier=
    Development Status :: 5 - Production/Stable
        License :: OSI Approved :: Apache Software License
        Topic :: System :: Monitoring

[files]
packages =
    monasca_agent
    monasca_setup
data_files=
    share/monasca/agent =
        agent.yaml.template
        packaging/supervisor.conf.template
        packaging/monasca-agent.init.template
        packaging/monasca-agent.service.template
    share/monasca/agent/conf.d = conf.d/*

[entry_points]
console_scripts =
    monasca-forwarder = monasca_agent.forwarder.daemon:main
    monasca-collector = monasca_agent.collector.daemon:main
    monasca-statsd = monasca_agent.statsd.daemon:main
    monasca-setup = monasca_setup.main:main
monasca_agent.collector.virt =
    libvirt = monasca_agent.collector.virt.libvirt.inspector:LibvirtInspector
    hyperv = monasca_agent.collector.virt.hyperv.inspector:HyperVInspector
    vsphere = monasca_agent.collector.virt.vmware.inspector:VsphereInspector
    xenapi = monasca_agent.collector.virt.xenapi.inspector:XenapiInspector


[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
