[metadata]
name = monasca-agent
maintainer = OpenStack
maintainer_email = openstack-discuss@lists.openstack.org
description-file = README.rst
summary = Monitoring agent for gathering metrics and sending them to the Monasca API.
home-page = https://github.com/openstack/monasca-agent
keywords=
    openstack
    monitoring
license = Apache-2
include_package_data = True
test_suite = nose.collector
classifier=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Monitoring
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    monasca_agent
    monasca_setup
data_files=
    share/monasca/agent =
        agent.yaml.template
        packaging/monasca-collector.service.template
        packaging/monasca-forwarder.service.template
        packaging/monasca-statsd.service.template
        packaging/monasca-agent.target.template
    share/monasca/agent/conf.d = conf.d/*

[entry_points]
console_scripts =
    monasca-forwarder = monasca_agent.forwarder.daemon:main
    monasca-collector = monasca_agent.collector.daemon:main
    monasca-statsd = monasca_agent.statsd.daemon:main
    monasca-setup = monasca_setup.main:main
monasca_agent.collector.virt =
    libvirt = monasca_agent.collector.virt.libvirt.inspector:LibvirtInspector
    hyperv = monasca_agent.collector.virt.hyperv.inspector:HyperVInspector
    vsphere = monasca_agent.collector.virt.vmware.inspector:VsphereInspector
    xenapi = monasca_agent.collector.virt.xenapi.inspector:XenapiInspector

# list of extra dependencies that are required by some plugin
# for details see #PEP0426
[extras]
influxdb =
  toml
influxdb_relay =
  toml
kafka_plugin =
  monasca-common>=1.4.0 # Apache-2.0
kubernetes_api =
   ipaddress>=1.0.16 #python_version<'3.3'  # PSF
libvirt =
  libvirt-python>=3.5.0 # LGPLv2+
  python-novaclient>=9.1.0 # Apache-2.0
  python-neutronclient>=6.3.0 # Apache-2.0
ovs =
  python-novaclient>=9.1.0 # Apache-2.0
  python-neutronclient>=6.3.0 # Apache-2.0

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
